Both formatting and carousel working now. Need to see how to load faster (hts-cache?) and fix minor nav bar alignment.

--- a/asp/amandaseasholtz.com/main.css
+++ b/asp/amandaseasholtz.com/main.css
@@ -104,3 +104,12 @@ footer li img {
   background-position: center;
   background-repeat: no-repeat;
 }
+
+/* adder overrides */
+.adder #container {
+  background-color: #0094FF;
+}
+
+.right.carousel-control, .left.carousel-control {
+  display: none;
+}
